fix: increase base font-size to 30px for readability

--- a/demo/style.css
+++ b/demo/style.css
@@ -45,7 +45,7 @@
 }
 
 html {
-  font-size: 20px;
+  font-size: 30px;
   image-rendering: pixelated;
   -webkit-font-smoothing: none;
   -moz-osx-font-smoothing: unset;
